data/derived/comb/progs/unify/prog3028.ml.out
Characters 11-13:
   (sin, 4 * pi);;
             ^^
Error: This expression has type float but an expression was expected of type
         int
